# wafip

./: .gitignore  README.md  pyproject.toml  tox.ini
src/wafip/: __init__.py  cli.py  exceptions.py  ipset.py  utils.py
tests/: test_wafip.py
tests/unittest/: test_ipset.py
